# ecosystem-rust

./: Cargo.toml  README.txt
optimization/: animals.rs  benchmark.rs  island.rs  main.rs  simulation.rs
outdated/: animals.rs  benchmark.rs  main.rs
src/: animals.rs  benchmark.rs  graphics.rs  island.rs  main.rs  simulation.rs
tests/: test_animals.rs  test_island.rs
