[package]
name = "ecosystem-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_distr = "0.4.3"
rand = "0.8.5"
lazy_static = "1.4.0"
ordered-float = "4.2.0"
plotters = "0.3.5"

[[bin]]
name = "current"
path = "src/main.rs"

[[bin]]
name = "outdated"
path = "outdated/main.rs"

[[bin]]
name = "bench"
path = "src/benchmark.rs"

[[bin]]
name = "bench_outdated"
path = "outdated/benchmark.rs"
